<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/img_ganpati"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/sloka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_bold_italic"
            android:gravity="center"
            android:text="@string/mantra"
            android:textColor="@color/line_grad_3"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image">

        </TextView>

        <TextView
            android:id="@+id/invitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gilroy_light"
            android:gravity="center"
            android:text="@string/wedding"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sloka">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invitation">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imagegirl"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img_bride"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:id="@+id/girlName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/gilroy_bold_italic"
                    android:gravity="center"
                    android:text="@string/girl"
                    android:textColor="@color/yellow"
                    android:textSize="22sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageweds"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/weds"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </de.hdodenhof.circleimageview.CircleImageView>


                <TextView
                    android:id="@+id/weds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/gilroy_bold_italic"
                    android:gravity="bottom"
                    android:text="@string/weds"
                    android:textColor="@color/grey_100"
                    android:textSize="22sp"
                    android:visibility="gone">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageboy"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img_groom"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:id="@+id/boyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/gilroy_bold_italic"
                    android:text="@string/boy"
                    android:textColor="@color/yellow"
                    android:textSize="22sp">

                </TextView>

            </LinearLayout>


        </LinearLayout>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/splash_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            app:lottie_repeatCount="100">


        </com.airbnb.lottie.LottieAnimationView>


        <!--    <com.google.android.material.appbar.AppBarLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--        <androidx.appcompat.widget.Toolbar-->
        <!--            android:id="@+id/toolbar"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="?attr/actionBarSize"-->
        <!--            android:background="?attr/colorPrimary"-->
        <!--            app:popupTheme="@style/AppTheme.PopupOverlay" />-->

        <!--    </com.google.android.material.appbar.AppBarLayout>-->

        <!--    <include layout="@layout/content_main" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/welcome"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="1"
                android:src="@drawable/welcome"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/gilroy_bold_italic"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/lets_begin"
                android:textColor="@color/line_grad_3"
                android:textSize="14sp"
                android:visibility="visible" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                >
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:fabCustomSize="@dimen/design_fab_image_size"
                    android:background="@drawable/button_bg"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go"
                    android:textSize="16dp"
                    android:fontFamily="@font/gilroy_bold_italic"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="visible"
                    android:drawableEnd="@drawable/ic_baseline_play_arrow_24"
                    android:elevation="10dp"
                    android:textColor="@color/line_grad_3" />

            </FrameLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>